# swagger.json
@@ -1,159 +1,233 @@
 {
     "swagger": "2.0",
     "info": {
-      "description": "API para gerenciamento de escolas, incluindo operações CRUD, upload e leitura de dados de um arquivo Excel.",
-      "version": "1.0.0",
-      "title": "Back-end API de Gerenciamento de Escolas"
+        "description": "API para gerenciamento de escolas, incluindo operações CRUD, upload e leitura de dados de um arquivo Excel.",
+        "version": "1.0.0",
+        "title": "Back-end API de Gerenciamento de Escolas"
     },
     "host": "localhost:5005",
     "basePath": "/",
     "tags": [
-      {
-        "name": "escolas",
-        "description": "Operações sobre escolas"
-      }
+        {
+            "name": "escolas",
+            "description": "Operações sobre escolas"
+        }
     ],
-    "schemes": ["http"],
+    "schemes": [
+        "http"
+    ],
     "paths": {
-      "/insertEscola": {
-        "post": {
-          "tags": ["escolas"],
-          "summary": "Inserir uma nova escola",
-          "description": "Insere uma nova escola à base de dados.",
-          "consumes": ["application/json"],
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "in": "body",
-              "name": "body",
-              "description": "Objeto Escola que precisa ser inserido à base de dados",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/Escola"
-              }
+        "/insert-escola": {
+            "post": {
+                "tags": [
+                    "escolas"
+                ],
+                "summary": "Inserir uma nova escola",
+                "description": "Insere uma nova escola à base de dados.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Objeto Escola que precisa ser inserido à base de dados",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Escola"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Escola inserida com sucesso"
+                    },
+                    "404": {
+                        "description": "Erro ao inserir a escola"
+                    }
+                }
             }
-          ],
-          "responses": {
-            "201": {
-              "message": "Escola inserida com sucesso"
-            },
-            "404": {
-                "error": [
-                    "Provincia invalida",
-                    "Erro ao inserir a escola",
-                    "error"
-                ]
-            }
-          }
-        }
-      },
-      "get": {
-        "tags": ["escolas"],
-        "summary": "Lista todas as escolas",
-        "description": "Retorna uma lista de todas as escolas cadastradas na base de dados.",
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "message": "Operação bem-sucedida",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Escola"
-              }
-            }
-          }
-        }
-      },
-      "/escolas/{id}": {
-        "get": {
-          "tags": ["escolas"],
-          "summary": "Encontra escola pelo ID",
-          "description": "Retorna uma única escola.",
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "description": "ID da escola a retornar",
-              "required": true,
-              "type": "integer",
-              "format": "int64"
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "Operação bem-sucedida",
-              "schema": {
-                "$ref": "#/definitions/Escola"
-              }
-            },
-            "404": {
-              "description": "Escola não encontrada"
-            }
-          }
         },
-        "put": {
-          "tags": ["escolas"],
-          "summary": "Atualiza uma escola",
-          "description": "Atualiza os dados da escola especificada pelo ID.",
-          "consumes": ["application/json"],
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "description": "ID da escola que precisa ser atualizada",
-              "required": true,
-              "type": "integer",
-              "format": "int64"
-            },
-            {
-              "in": "body",
-              "name": "body",
-              "description": "Objeto Escola que precisa ser atualizado",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/Escola"
-              }
+        "/select-escolas": {
+            "get": {
+                "tags": [
+                    "escolas"
+                ],
+                "summary": "Lista todas as escolas",
+                "description": "Retorna uma lista de todas as escolas cadastradas na base de dados.",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Operação bem-sucedida",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Escola"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Erro do servidor"
+                    }
+                }
             }
-          ],
-          "responses": {
-            "200": {
-              "description": "Escola atualizada"
-            },
-            "404": {
-              "description": "Escola não encontrada"
+        },
+        "/select-escola/{id}": {
+            "get": {
+                "tags": [
+                    "escolas"
+                ],
+                "summary": "Consulta uma escola pelo ID",
+                "description": "Retorna uma única escola.",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID da escola a retornar",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Operação bem-sucedida",
+                        "schema": {
+                            "$ref": "#/definitions/Escola"
+                        }
+                    },
+                    "404": {
+                        "description": "Escola não encontrada"
+                    }
+                }
             }
-          }
+        },
+        "/update-escola/{id}": {
+            "put": {
+                "tags": [
+                    "escolas"
+                ],
+                "summary": "Atualiza uma escola",
+                "description": "Atualiza os dados da escola especificada pelo ID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID da escola que precisa ser atualizada",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Objeto Escola que precisa ser atualizado",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Escola"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Dados atualizados com sucesso!"
+                    },
+                    "404": {
+                        "description": "Erro ao atualizar os dados"
+                    }
+                }
+            }
+        },
+        "/delete-escola/{id}": {
+            "delete": {
+                "tags": [
+                    "escolas"
+                ],
+                "summary": "Remover uma escola pelo ID",
+                "description": "Remove uma única escola.",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID da escola a retornar",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Escola removida com sucesso!"
+                    },
+                    "404": {
+                        "description": "Erro ao remover a escola"
+                    }
+                }
+            }
         }
-      }
     },
     "definitions": {
-      "Escola": {
-        "type": "object",
-        "required": ["nome", "email", "salas", "provincia"],
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "nome": {
-            "type": "text"
-          },
-          "email": {
-            "type": "text"
-          },
-          "salas": {
-            "type": "integer"
-          },
-          "provincia": {
-            "type": "text"
-          },
-          "data": {
-            "type": "date"
-          }
+        "Escola": {
+            "type": "object",
+            "required": [
+                "nome",
+                "email",
+                "salas",
+                "provincia"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "nome": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "salas": {
+                    "type": "integer"
+                },
+                "provincia": {
+                    "type": "string"
+                },
+                "data": {
+                    "type": "date  default (date('now')"
+                }
+            }
+        },
+        "Provincias": {
+            "type": "object",
+            "required": [
+                "nome",
+                "capital"
+            ],
+            "properties": {
+                "nome": {
+                    "type": "string"
+                },
+                "capital": {
+                    "type": "string"
+                }
+            }
         }
-      }
     }
-  }
-  
+}
